Bug 475016 - Shortcut scheme not loading custom shortcuts on startup
Summary: Shortcut scheme not loading custom shortcuts on startup
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kxmlgui
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.110.0
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Mladen Milinkovic, Max
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-29 09:35 UTC by villanyora
Modified: 2023-10-02 10:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description villanyora 2023-09-29 09:35:02 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Copy the "default" shortcut scheme, add some shortcuts to the new scheme and save it.
2. Test them, close SubtitleComposer and start it again. The new shortcuts won't work, until...
3. Open the Shortcut settings, select "default" scheme first and then re-select your own scheme.

OBSERVED RESULT
Custom shortcut scheme is not loading the custom shortcuts

EXPECTED RESULT
All shortcuts should be loaded in the scheme

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:  Linux Mint 21.2 Cinnamon
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Mladen Milinkovic, Max 2023-09-29 13:36:17 UTC
Does loading custom schemes work in other KDE applications?

What KF version are you using?
Comment 2 Mladen Milinkovic, Max 2023-09-29 13:54:25 UTC
I can reproduce in other applications (tried Konsole) using KF 5.110 on Arch Linux
Comment 3 Mladen Milinkovic, Max 2023-09-29 18:13:20 UTC
Submitted fix for this here:
https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/190
Comment 4 Méven Car 2023-10-02 10:00:19 UTC
Git commit f015fa6006d2e2eea2d2aac11c18219b255722ef by Méven Car, on behalf of Mladen Milinkovic.
Committed on 02/10/2023 at 10:45.
Pushed by meven into branch 'master'.

Fix merging of XMLs with multiple ActionProperties tags

M  +79   -0    autotests/kxmlgui_unittest.cpp
M  +1    -0    autotests/kxmlgui_unittest.h
M  +4    -0    autotests/testguiclient.h
M  +3    -1    src/kxmlguiclient.cpp

https://invent.kde.org/frameworks/kxmlgui/-/commit/f015fa6006d2e2eea2d2aac11c18219b255722ef