Fix merging of XMLs with multiple ActionProperties tags

BUG: 475016